add lid links to notifications

--- a/app/views/user/notifications.html
+++ b/app/views/user/notifications.html
@@ -5,99 +5,109 @@
 	<div class="notifications">
 		<div class="inner">
 			<p class="notifications-title">TUS NOTIFICACIONES</p>
-			<a href="#" class="notification">
+			<div class="notification">
 				<div></div>
 				<div class="content">
 					<header class="notification-header">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_cesarardiles.jpg">
+						<a href="#">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_cesarardiles.jpg">
+						</a>
 						<div class="info">
-							<p>ANNA OSTYANKO</p>
+							<a href="#" class="name">ANNA OSTYANKO</a>
 							<p class="u-margin-top-5">ha <strong>hecho un review</strong></p>
 						</div>
 						<div class="time"><i class="bi_interface-clock"></i> <span>15 min ago</span></div>
 					</header>
-					<section class="notification-content">
+					<a href="#" class="notification-content">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/a3a4dc50c5e0f0f3e6faab12735bb74b.jpg">
 						<div class="info">
 							<p class="name uppercase">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT  SLEEP</p>
 							<p class="valuations u-margin-top-15"><i class="bi_ecommerce-diamon"></i>&nbsp;&nbsp; 252</p>
 						</div>
-					</section>
+					</a>
 				</div>
-			</a>
-			<a href="#" class="notification">
+			</div>
+			<div class="notification">
 				<div></div>
 				<div class="content">
 					<header class="notification-header">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_humbertosaldarriaga.jpg">
+						<a href="#">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_humbertosaldarriaga.jpg">
+						</a>
 						<div class="info">
-							<p>ANNA OSTYANKO</p>
+							<a href="#" class="name">ANNA OSTYANKO</a>
 							<p class="u-margin-top-5">ha <strong>valorado</strong> una obra</p>
 						</div>
 						<div class="time"><i class="bi_interface-clock"></i> <span>15 min ago</span></div>
 					</header>
-					<section class="notification-content">
+					<a href="#" class="notification-content">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/79aadc68219b18654f945e636e4e7bdd.jpg">
 						<div class="info">
 							<p class="name uppercase">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT  SLEEP</p>
 							<p class="valuations u-margin-top-15"><i class="bi_ecommerce-diamon"></i>&nbsp;&nbsp; 252</p>
 						</div>
-					</section>
+					</a>
 				</div>
-			</a>
-			<a href="#" class="notification">
+			</div>
+			<div class="notification">
 				<div></div>
 				<div class="content">
 					<header class="notification-header">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_diegorossell.jpg">
+						<a href="#">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_diegorossell.jpg">
+						</a>
 						<div class="info">
-							<p>ANNA OSTYANKO</p>
+							<a href="#" class="name">ANNA OSTYANKO</a>
 							<p class="u-margin-top-5">compro una obra original</p>
 						</div>
 						<div class="time"><i class="bi_interface-clock"></i> <span>15 min ago</span></div>
 					</header>
-					<section class="notification-content">
+					<a href="#" class="notification-content">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/4e2097b6d3f203ff3a79d878e8ba3ab6.jpg">
 						<div class="info">
 							<p class="name uppercase">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT  SLEEP</p>
 							<p class="valuations u-margin-top-15"><i class="bi_ecommerce-diamon"></i>&nbsp;&nbsp; 252</p>
 						</div>
-					</section>
+					</a>
 				</div>
-			</a>
-			<a href="#" class="notification">
+			</div>
+			<div class="notification">
 				<div></div>
 				<div class="content">
 					<header class="notification-header">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_alfierirossi.jpg">
+						<a href="#">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_alfierirossi.jpg">
+						</a>
 						<div class="info">
-							<p>ANNA OSTYANKO</p>
+							<a href="#" class="name">ANNA OSTYANKO</a>
 							<p class="u-margin-top-5">te está siguiendo ahora</p>
 						</div>
 						<div class="time"><i class="bi_interface-clock"></i> <span>15 min ago</span></div>
 					</header>
 				</div>
-			</a>
-			<a href="#" class="notification">
+			</div>
+			<div class="notification">
 				<div></div>
 				<div class="content">
 					<header class="notification-header">
-						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_diegorossell.jpg">
+						<a href="#">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_diegorossell.jpg">
+						</a>
 						<div class="info">
-							<p>ANNA OSTYANKO</p>
+							<a href="#" class="name">ANNA OSTYANKO</a>
 							<p class="u-margin-top-5">preguntó sobre la disponibilidad de una obra</p>
 						</div>
 						<div class="time"><i class="bi_interface-clock"></i> <span>15 min ago</span></div>
 					</header>
-					<section class="notification-content">
+					<a href="#" class="notification-content">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/4e2097b6d3f203ff3a79d878e8ba3ab6.jpg">
 						<div class="info">
 							<p class="name uppercase">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT  SLEEP</p>
 							<p class="valuations u-margin-top-15"><i class="bi_ecommerce-diamon"></i>&nbsp;&nbsp; 252</p>
 						</div>
-					</section>
+					</a>
 				</div>
-			</a>
+			</div>
 			<p class="notifications-more">TODA TU ACTIVIDAD</p>
 		</div>
 	</div>
