--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3461,7 +3461,8 @@ body
 					margin-right 10px
 				.info
 					flex 1
-					p:first-child
+					// p:first-child
+					.name
 						font-family: 'Montserrat',sans-serif;
 						font-weight bold
 						font-size 10px
