add new next and prev buttons

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2371,6 +2371,30 @@ body
 /*------------------------------------*
 	$ SINGLE INFO
 *------------------------------------*/
+
+.works-nav
+	display flex
+	justify-content space-between
+	.nav
+		display flex
+		align-items center
+		cursor pointer
+	p
+		color #838d8f
+		font-size 10px
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		letter-spacing 1.5px
+		display none
+	i
+		color #cdd8d8
+
+@media (min-width: 600px)
+	.works-nav
+		p
+			display block
+
+
 .single-image-inner
 	display flex
 	flex-direction column
