--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -15,26 +15,28 @@
 	<!-- <p class="next-btn">siguiente</p> -->
 {% endif %}
 
-	<div class="grid-container u-margin-top-20 u-margin-bottom-20">
+	<div class="grid-container u-margin-top-15 u-margin-bottom-15">
 		<div class="grid-100">
 			<div class="works-nav">
 				<div href="#" class="nav prev-btn">
-					<i class="bi_interface-left"></i>&nbsp;&nbsp;
-					<p>PREV</p>
+					<i class="bi_interface-left"></i>
+					<p>&nbsp;&nbsp;PREV</p>
 				</div>
 				<div href="#" class="nav">
-					<i class="bi_media-image-b"></i>&nbsp;&nbsp;
-					<p>IR AL PORTAFOLIO</p>
+					<i class="bi_media-image-b"></i>
+					<p>&nbsp;&nbsp;IR AL PORTAFOLIO</p>
 				</div>
 				<div href="#" class="nav next-btn">
-					<i class="bi_interface-right"></i>&nbsp;&nbsp;
-					<p>NEXT</p>
+					<i class="bi_interface-right"></i>
+					<p>&nbsp;&nbsp;NEXT</p>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="grid-container u-margin-top-10">
+	<div class="u-separator" style="background: #eee;"></div>
+
+	<div class="grid-container u-margin-top-20">
 		<div class="grid-100">
 			<div class="single-info">
 				<div class="single-image">
