--- a/app/styles/utilities.styl
+++ b/app/styles/utilities.styl
@@ -33,6 +33,8 @@
 .u-padding-top-40
 	padding-top 40px
 
+.u-margin-bottom-15
+	margin-bottom 15px
 .u-margin-bottom-20
 	margin-bottom 20px
 .u-margin-bottom-40
