--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -132,8 +132,17 @@
 	{% include 'elements/product.html' %}
 	{% include 'elements/collection.html' %}
 	{% include 'elements/carrouselItem.html' %}
+
 	{% include 'elements/feed-user-follow.html' %}
 	{% include 'elements/feed-work-created.html' %}
+
+	{% include 'elements/notification-follow.html' %}
+	{% include 'elements/notification-like.html' %}
+	{% include 'elements/notification-request.html' %}
+	{% include 'elements/notification-review.html' %}
+	
+	{% include 'elements/feed-work-created.html' %}
+
 
 	{% include 'elements/review.html' %}
 	{% include 'elements/filterItem.html' %}
