--- a/app/views/partials/elements/notification-request.html
+++ b/app/views/partials/elements/notification-request.html
@@ -4,16 +4,16 @@
   <div class="content">
     <header class="notification-header">
       <a href="#">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_cesarardiles.jpg">
+        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_diegorossell.jpg">
       </a>
       <div class="info">
         <a href="#" class="name">ANNA OSTYANKO</a>
-        <p class="u-margin-top-5">ha <strong>hecho un review</strong></p>
+        <p class="u-margin-top-5">preguntó sobre la disponibilidad de una obra</p>
       </div>
       <div class="time"><i class="bi_interface-clock"></i> <span>15 min ago</span></div>
     </header>
     <a href="#" class="notification-content">
-      <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/a3a4dc50c5e0f0f3e6faab12735bb74b.jpg">
+      <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/4e2097b6d3f203ff3a79d878e8ba3ab6.jpg">
       <div class="info">
         <p class="name uppercase">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT  SLEEP</p>
         <p class="valuations u-margin-top-15"><i class="bi_ecommerce-diamon"></i>&nbsp;&nbsp; 252</p>
