--- a/app/views/partials/elements/notification-like.html
+++ b/app/views/partials/elements/notification-like.html
@@ -3,20 +3,20 @@
     <div></div>
     <div class="content">
       <header class="notification-header">
-        <a href="#">
-          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_humbertosaldarriaga.jpg">
+        <a href="/user/<%=User.username%>">
+          <img src="<%=User.photo%>">
         </a>
         <div class="info">
-          <a href="#" class="name">ANNA OSTYANKO</a>
+          <a href="/user/<%=User.username%>" class="name"><%= User.fullname %></a>
           <p class="u-margin-top-5">ha <strong>valorado</strong> una obra</p>
         </div>
-        <div class="time"><i class="bi_interface-clock"></i> <span>15 min ago</span></div>
+        <div class="time"><i class="bi_interface-clock"></i> <span><%=formatDate(createdAt)%></span></div>
       </header>
-      <a href="#" class="notification-content">
-        <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/79aadc68219b18654f945e636e4e7bdd.jpg">
+      <a href="/user/<%=element.User.username%>/work/<%=element.nameSlugify%>" class="notification-content">
+        <img src="<%= addFilter(element.photo, 'w_60,h_60,c_fill') %>">
         <div class="info">
-          <p class="name uppercase">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT  SLEEP</p>
-          <p class="valuations u-margin-top-15"><i class="bi_ecommerce-diamon"></i>&nbsp;&nbsp; 252</p>
+          <p class="name uppercase"><%=element.name%></p>
+          <p class="valuations u-margin-top-15"><i class="bi_ecommerce-diamon"></i>&nbsp;&nbsp; <%= element.likes%></p>
         </div>
       </a>
     </div>
