--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -96,58 +96,14 @@
 	<div class="grid-container u-padding-top-10">
 		<div class="grid-100 grid-parent">
 			<div class="categories">
+				{% for category in categories %}
 				<div class="categorie-container">
-					<!-- <a href="/works/category/pintura/page-1/" class="categorie" style="background-image: url('img/categories/1 pintura.png');"> -->
-					<a href="/works/category/pintura/page-1/" class="categorie" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1448431758/categories/pintura.png');">
+					<a href="/works/category/{{category.nameSlugify}}/page-1/" class="categorie" style="background-image: url('{{category.photo}}');">
 						<div class="cover"></div>
-						<p>pintura</p>
+						<p>{{category.name}}</p>
 					</a>
 				</div>
-				<div class="categorie-container">
-					<!-- <a href="/works/category/arte-urbano/page-1" class="categorie" style="background-image: url('img/categories/2 arte urbano.png');"> -->
-					<a href="/works/category/arte-urbano/page-1" class="categorie" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1448431755/categories/arte-urbano.png');">
-						<div class="cover"></div>
-						<p>arte</p>
-					</a>
-				</div>
-				<div class="categorie-container">
-					<!-- <a href="/works/category/dibujo/page-1" class="categorie" style="background-image: url('img/categories/3 dibujo.png');"> -->
-					<a href="/works/category/dibujo/page-1" class="categorie" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1448431750/categories/dibujo.png');">
-						<div class="cover"></div>
-						<p>dibujo</p>
-					</a>
-				</div>
-				<div class="categorie-container">
-					<!-- <a href="/works/category/digital/page-1" class="categorie" style="background-image: url('img/categories/4 digital.png');"> -->
-					<a href="/works/category/digital/page-1" class="categorie" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1448431749/categories/digital.png');">
-						<div class="cover"></div>
-						<p>digital</p>
-					</a>
-				</div>
-				<div class="categorie-container">
-					<a href="/works/category/collage/page-1" class="categorie" style="background-image: url('img/categories/5 collage.png');">
-						<div class="cover"></div>
-						<p>collage</p>
-					</a>
-				</div>
-				<div class="categorie-container">
-					<a href="/works/category/escultura/page-1" class="categorie" style="background-image: url('img/categories/6 collage.png');">
-						<div class="cover"></div>
-						<p>escultura</p>
-					</a>
-				</div>
-				<div class="categorie-container">
-					<a href="/works/category/fotografia/page-1" class="categorie" style="background-image: url('img/categories/7 collage.png');">
-						<div class="cover"></div>
-						<p>fotogragia</p>
-					</a>
-				</div>
-				<div class="categorie-container">
-					<a href="/works/category/ilustracion/page-1" class="categorie" style="background-image: url('img/categories/8 collage.png');">
-						<div class="cover"></div>
-						<p>ilustracion</p>
-					</a>
-				</div>
+				{% endfor %}
 			</div>
 		</div>
 	</div>
